<resources>
    <string name="app_name">gruv</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>

    <string name="error_404">Can\'t find anything...</string>
    <string name="error_404_home">Can\'t find anything here. Follow someone and see what you get...</string>
    <string name="error_404_2">There\'s nothing here...</string>

    //Facebook
    <!-- <string name="facebook_app_id">2546786102109091</string> -->
    <string name="fb_login_protocol_scheme">fb2546786102109091</string>
    <string name="facebook_app_id">2546786102109091</string>


    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_profile">Profile</string>

    <string name="descriptor_logo_text">Gruv Logo</string>
    <string name="landing_sign_in">sign in using:</string>
    <string name="landing_email">email</string>
    <string name="landing_or">or</string>
    <string name="descriptor_google">Sign in via google</string>
    <string name="descriptor_fb">Sign in via facebook</string>
    <string name="descriptor_twitter">Sign in via twitter</string>
    <string name="landing_register"><u>don\'t have an account? create one</u></string>

    <string name="email_input">email</string>
    <string name="password_input">password</string>
    <string name="sign_in_button">sign in</string>
    <string name="name_input">name</string>
    <string name="username_input">username</string>
    <string name="confirm_password_input">confirm password</string>
    <string name="register_button">create account</string>
    <string name="forgot_password"><u>forgot password</u></string>
    <string name="reset">reset password</string>
    <string name="next_button">next</string>
    <string name="verify_code">verification code</string>

    <string name="hint_enter_a_message">Enter a message...</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_out">sign_out</string>
    <string name="desc_firebase_lockup">firebase_content_description</string>
    <string name="facebook_title_text">facebook_title</string>
    <string name="signed_out">signed_out</string>
    <string name="loading">loading</string>
    <string name="facebook_status_fmt"><![CDATA[<string name=\"facebook_status_fmt\">Facebook User: %s</string>]]></string>
    <string name="firebase_status_fmt"><![CDATA[<string name=\"firebase_status_fmt\">Firebase UID: %s</string>]]></string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="sign_in">sign in</string>

    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="post_notifications">Turn on post notificatiions</string>
    <string name="back">Back</string>
    <string name="more">More</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="verified">Verified</string>
    <string name="zero">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="bio">Bio</string>
    <string name="site">site</string>
    <string name="all_events">All Events</string>
    <string name="error">Error</string>
    <string name="error_404_profile">You haven\'t posted any events yet. Tap on \'+\' to add one</string>
    <string name="error_404_user">There aren\'t any events here</string>
</resources>
