<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:visibility="gone"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_saved"
            android:title="@string/menu_saved" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />

    </group>

    <item android:title="More!">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
