<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:contentDescription="@string/desc_firebase_lockup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/generic_title_text"
            android:gravity="center" />

        <TextView
            android:id="@+id/status"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="150dp"
            android:layout_height="50dp"
            tools:text="Firebase User ID: 123456789abc" />

        <RelativeLayout
            android:id="@+id/spinnerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/providerSpinnerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/generic_label_provider"/>

            <Spinner
                android:id="@+id/providerSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/providerSpinnerLabel"
                android:layout_toRightOf="@+id/providerSpinnerLabel"
                android:layout_toEndOf="@+id/providerSpinnerLabel" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/genericSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_margin="16dp"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>